--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .scoreboard {
-    background-color: #415a77;
+    background-color: #454545;
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -44,7 +44,9 @@ body {
 
 #home-score {
     font-family: 'Digital-7', Arial, Helvetica, sans-serif;
+    font-weight: 600;
     font-size: 2rem;
+    color: rgb(255, 73, 73);
 }
 
 .home-buttons button {
