--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,8 @@ body {
     border-radius: 15px;
 }
 
+/* Home Scoreboard */
+
 .home-scoreboard {
     display: flex;
     flex-direction: column;
@@ -68,6 +70,63 @@ body {
 }
 
 .home-buttons button:active {
+    background-color: white;
+    color: #000000;
+}
+
+/* Guest Scoreboard */
+
+.guest-scoreboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.guest-scorebg {
+    background-color: #000000;
+    width: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin: 5px;
+}
+
+.guest-title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin-bottom: 1px;
+}
+
+#guest-score {
+    font-family: 'Digital-7', Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+    color: rgb(255, 73, 73);
+}
+
+.guest-buttons button {
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+
+    font-family: 'Digital-7', Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+    padding: 5px 10px;
+    margin: 10px 0;
+    box-shadow: 1px 2px 2px rgb(0, 0, 0, 0.250);
+}
+
+.guest-buttons button:hover {
+    background-color: rgb(93, 93, 93);
+    color: white;
+}
+
+.guest-buttons button:active {
     background-color: white;
     color: #000000;
 }
